--- a/src/index.css
+++ b/src/index.css
@@ -17,14 +17,26 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+/* a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
 a:hover {
   color: #535bf2;
+} */
+
+
+/* Works for Chrome, Edge, Safari */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
 }
+
+/* Works for Firefox */
+.hide-scrollbar {
+  scrollbar-width: none;
+}
+
 
 body {
   margin: 0;
