--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
-
+@theme {
+  --font-outfit: "Outfit", sans-serif;
+}
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+font-family: var(--font-outfit);
   line-height: 1.5;
   font-weight: 400;
 
@@ -39,6 +42,7 @@ a:hover {
 
 
 body {
+
   margin: 0;
   display: flex;
   place-items: center;
