--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,13 @@ h1 {
   line-height: 1.1;
 }
 
+
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
 /* button {
   border-radius: 8px;
   border: 1px solid transparent;
